# sony-anc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-31-sony-anc-updates.md
docs/superpowers/specs/: 2026-05-31-sony-anc-updates-design.md
sony-anc/: Cargo.toml
sony-anc/src/: main.rs
sony-wf1000xm5/: Cargo.toml
sony-wf1000xm5/src/: command.rs  frame_parser.rs  payload.rs
