[package]
name = "sony-anc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
bluer = { version = "0.17.4", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sony-wf1000xm5 = { path = "../sony-wf1000xm5" }
tokio = { version = "1.47.1", features = ["full"] }
