[package]
name = "sony-anc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bluer = { version = "0.17.4", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sony-wf1000xm5 = { path = "../sony-wf1000xm5" }
tokio = { version = "1.50.0", features = ["full"] }
